hphp/hack/test/typecheck/is_expression/interface_disjoint.php.exp
ERROR: File "interface_disjoint.php", line 27, characters 12-14:
Invalid return type (Typing[4110])
  File "interface_disjoint.php", line 24, characters 26-32:
  Expected `nothing`
  File "interface_disjoint.php", line 24, characters 16-18:
  But got `IC1`
ERROR: File "interface_disjoint.php", line 27, characters 12-14:
Invalid return type (Typing[4110])
  File "interface_disjoint.php", line 24, characters 26-32:
  Expected `nothing`
  File "interface_disjoint.php", line 25, characters 16-18:
  But got `(not IC2 & IC1)` from this `is` expression test
ERROR: File "interface_disjoint.php", line 27, characters 12-14:
Invalid return type (Typing[4110])
  File "interface_disjoint.php", line 24, characters 26-32:
  Expected `nothing`
  File "interface_disjoint.php", line 25, characters 16-18:
  But got `not IC2` from this `is` expression test
ERROR: File "interface_disjoint.php", line 36, characters 12-14:
Invalid return type (Typing[4110])
  File "interface_disjoint.php", line 33, characters 26-32:
  Expected `nothing`
  File "interface_disjoint.php", line 33, characters 16-18:
  But got `IC1`
ERROR: File "interface_disjoint.php", line 36, characters 12-14:
Invalid return type (Typing[4110])
  File "interface_disjoint.php", line 33, characters 26-32:
  Expected `nothing`
  File "interface_disjoint.php", line 34, characters 16-22:
  But got `(not SealedI & IC1)` from this `is` expression test
ERROR: File "interface_disjoint.php", line 36, characters 12-14:
Invalid return type (Typing[4110])
  File "interface_disjoint.php", line 33, characters 26-32:
  Expected `nothing`
  File "interface_disjoint.php", line 34, characters 16-22:
  But got `not SealedI` from this `is` expression test
ERROR: File "interface_disjoint.php", line 45, characters 5-36:
hh_expect_equivalent type mismatch (Typing[4452])
  File "interface_disjoint.php", line 43, characters 16-18:
  Expected `not IC1` from this `is` expression test
  File "interface_disjoint.php", line 45, characters 26-30:
  But got `INotC`
ERROR: File "interface_disjoint.php", line 52, characters 5-36:
hh_expect_equivalent type mismatch (Typing[4452])
  File "interface_disjoint.php", line 50, characters 16-18:
  Expected `not IC2` from this `is` expression test
  File "interface_disjoint.php", line 52, characters 26-30:
  But got `INotC`
ERROR: File "interface_disjoint.php", line 59, characters 5-36:
hh_expect_equivalent type mismatch (Typing[4452])
  File "interface_disjoint.php", line 57, characters 16-22:
  Expected `not SealedI` from this `is` expression test
  File "interface_disjoint.php", line 59, characters 26-30:
  But got `INotC`
